2010-01-28  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/DottedPair.h: Pairlist and Language are now derived
	from the new virtual class DottedPair since both class were 
	almost identical

	* src/Rcpp/SimpleVector.h: simple vectors gain a range
	based assign method and a range based assign constructor
	* inst/unitTests/runit.IntegerVector.R: new unit test 
	test.IntegerVector.range.constructors
	
	* src/Rcpp/Dimension.h: new class Rcpp::Dimension to support
	creation of vectors with dimensions
	        
	* src/Rcpp/*Vector.h: using Rcpp::Dimension
	
	* src/Rcpp/SimpleVector.h: data is initialized with 0 when 
	the object is constructed from size or Dimension constructor
	
	* inst/unitTestsrunit.CharacterVector.R: new unit test to test 
	constructors using Dimension
	* inst/unitTests/runit.IntegerVector.R: idem
	* inst/unitTests/runit.GenericVector.R: idem
	
	* R/unit.tests.R: new unexported function "test" to trigger
	unit tests using installed test cases

	* src/Rcpp/CharacterVector.h: minor bug fix in assign

	* inst/unitTest/runit.RcppResultSet.R: compare time using 
	as.numeric to avoid timezone problems

2010-01-27  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.RcppMatrix.R: added
	* inst/unitTests/runit.RcppMatrixView.R: added
	* inst/unitTests/runit.RcppVector.R: added
	* inst/unitTests/runit.RcppVectorView.R: added

2010-01-27  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/CharacterVector.h: CharacterVector gains a default
	constructor

	* src/Rcpp/CharacterVector.h: CharacterVector gains range
	constructors and range based assign methods facilitating
	construction from iterators

	* inst/unitTests/runit.CharacterVector.R: unit tests for assign
	and range based constructors

	* src/Rcpp/CharacterVector.h: CharacterVector::StringProxy
	gets a printing operator <<(std::ostream& )

	* src/Rcpp/Environment.h: removed the static
	Environment::RCPP_NAMESPACE which caused problems when
	embedding R
